// Указываем версию синтаксиса
syntax = "proto3";

// Название пакета для Go. Помогает избежать конфликтов имен
package user;

// Важно для Go-модулей. Указывает полный путь к сгенерированным файлам
option go_package = "proto/";

// Описываем наш главный сервис
service UserService {
  // "Ручка" для создания пользователя. Принимает CreateUserRequest, возвращает CreateUserResponse
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);

  // "Ручка" для входа
  rpc Login(LoginRequest) returns (LoginResponse);
}

// --- Сообщения (структуры данных) ---

// Что нужно для создания юзера
message CreateUserRequest {
  string email = 1;
  string password = 2;
}

// Что мы вернем после создания
message CreateUserResponse {
  string user_id = 1;
}

// Что нужно для логина
message LoginRequest {
  string email = 1;
  string password = 2;
}

// Что мы вернем после логина (пока просто, потом добавим JWT)
message LoginResponse {
  string message = 1;
}